<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize='30sp'
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textColor="@color/black"
        android:textSize='25sp'
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_pdf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_description"
        app:layout_constraintBottom_toTopOf="@+id/selectedPdf"
        />

    <TextView
        android:id="@+id/selectedPdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/pick_pdf"
        android:textColor="@color/white"
        android:textSize='25sp'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_pdf" />


</androidx.constraintlayout.widget.ConstraintLayout>